--- a/package.json
+++ b/package.json
@@ -18,20 +18,27 @@
     "country-state-city": "^3.2.1",
     "firebase": "^10.11.1",
     "next": "14.2.2",
+    "panolens": "^0.12.1",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.23.1",
+    "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
     "save": "^2.9.0",
     "swr": "^2.2.5",
-    "vn-local-plus": "^1.1.5"
+    "three": "^0.165.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
+    "@types/three": "^0.165.0",
+    "@types/uuid": "^9.0.8",
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
     "postcss": "^8",
