--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.17",
+    "@stripe/stripe-js": "^4.0.0",
     "bootstrap": "^5.3.3",
     "country-cities": "^1.0.8",
     "country-state-city": "^3.2.1",
     "firebase": "^10.11.1",
+    "js-cookie": "^3.0.5",
     "next": "14.2.2",
     "panolens": "^0.12.1",
     "react": "^18",
@@ -33,6 +35,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
