--- a/package.json
+++ b/package.json
@@ -9,23 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@canvasjs/react-charts": "^1.0.2",
+    "@devexpress/dx-react-chart": "^4.0.8",
+    "@devexpress/dx-react-core": "^4.0.8",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.17",
+    "@mui/x-charts": "^7.8.0",
     "@stripe/stripe-js": "^4.0.0",
     "bootstrap": "^5.3.3",
     "country-cities": "^1.0.8",
     "country-state-city": "^3.2.1",
     "firebase": "^10.11.1",
     "js-cookie": "^3.0.5",
-    "next": "14.2.2",
+    "next": "^14.2.2",
     "panolens": "^0.12.1",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.1.0",
     "react-loader-spinner": "^6.1.6",
+    "react-phone-input-2": "^2.15.1",
+    "react-phone-number-input": "^3.4.3",
     "react-router-dom": "^6.23.1",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
