--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.17",
+    "@mui/x-charts": "^7.8.0",
+    "@phosphor-icons/react": "^2.1.7",
     "@stripe/stripe-js": "^4.0.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
